[package]
name = "timestamp_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.1"

reqwest = {version="0.11", features=["json"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
futures = "0.3"
sha2 = "0.10"
hex = "0.4"
frost-dalek = { path = "frost-dalek"}
curve25519-dalek = { version = "3", features = ["serde"]}

[env]
SERVER_PORT="8083"