[package]
name = "timestamp_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.1"
log = "0.4.16"
env_logger = "0.6.1"
toml = "0.5.8"
reqwest = {version="0.11", features=["json"]}
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
frost-dalek = { path = "frost-dalek"}
curve25519-dalek = { version = "3", features = ["serde"]}
serde = { version = "1.0", features = ["derive"] }