[package]
name = "dikstits"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.1.8"
hex = "0.4.3"
chrono = "0.4.19"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.17.0", features = ["full"] }
frost-dalek = { path = "frost-dalek" }